# nxp3220_apps

./: groups  project.config
hwio/: hwio.c
test/: CMakeLists.txt  README
test/apps/: CMakeLists.txt
test/apps/cpu/: CMakeLists.txt
test/apps/cpu/cpunum/: CMakeLists.txt  cpu-num.sh
test/apps/hello/: CMakeLists.txt  hello.c
test/apps/main/: CMakeLists.txt  main.cpp  task.cpp  task.h  util.h
test/apps/mem/: CMakeLists.txt
test/apps/mem/memtester/: CMakeLists.txt
test/apps/mem/memtester/memtester-4.3.0/: Makefile
test/cmake/: arm.artik310.cmake
test/configs/: README  artik310.js
